--- a/pages/AdvancedTech.html
+++ b/pages/AdvancedTech.html
@@ -49,7 +49,11 @@
     <div class="ping"></div>
 
     <div class="whatsapp-btn">
-      <a href="https://wa.me/918848080346?text=Hello%2C%20I%20have%20a%20question%20About%20Your%20Services" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+      <a
+        href="https://wa.me/918848080346?text=Hello%2C%20I%20have%20a%20question%20About%20Your%20Services"
+        target="_blank"
+        ><i class="fa-brands fa-whatsapp"></i
+      ></a>
     </div>
     <div class="content">
       <!-- header section  -->
@@ -158,8 +162,7 @@
                   >Get Quote</a
                 >
                 <div class="sidemenu-btn">
-                  <span></span>
-                  <span></span>
+                  <i class="fa-solid fa-bars"></i>
                 </div>
               </div>
             </nav>
@@ -167,7 +170,9 @@
         </header>
         <div
           class="about-home"
-          style="background: url('../assets/Service-images/Advance\ Tech\ -\ 1.jpg')"
+          style="
+            background: url('../assets/Service-images/Advance\ Tech\ -\ 1.jpg');
+          "
         >
           <div class="header-top">
             <div class="auto-container">
@@ -180,13 +185,21 @@
                 <div class="header-right-nav">
                   <div class="email-header">
                     <span>Email us</span>
-                    <a href="#">info@scipytechnologies.com</a>
+                    <a href="mailto:hello@scipytechnologies.com"
+                      >hello@scipytechnologies.com</a
+                    >
                   </div>
                   <div class="header-top-social">
-                    <a href="#">FB.</a>
-                    <a href="#">IN.</a>
-                    <a href="#">TW.</a>
-                    <a href="#">LN.</a>
+                    <a href="https://www.facebook.com/scipytechnologiez/"
+                      >FB.</a
+                    >
+                    <a href="https://www.instagram.com/scipytechnologies/"
+                      >IN.</a
+                    >
+                    <a
+                      href="https://www.linkedin.com/company/scipytechnologies/mycompany/"
+                      >LN.</a
+                    >
                   </div>
                 </div>
               </div>
@@ -297,19 +310,26 @@
                 <h6>Social Icon</h6>
                 <ul class="social-icons-tab">
                   <li>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/scipytechnologies/"
+                      ><i class="fa-brands fa-instagram"></i
+                    ></a>
                   </li>
                   <li>
-                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/scipytechnologiez/"
+                      ><i class="fa-brands fa-facebook"></i
+                    ></a>
+                  </li>
+
+                  <li>
+                    <a
+                      href="https://www.linkedin.com/company/scipytechnologies/mycompany/"
+                      ><i class="fa-brands fa-linkedin"></i
+                    ></a>
                   </li>
                   <li>
-                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="https://www.youtube.com/@SciPyTechnologies"
+                      ><i class="fa-brands fa-youtube"></i
+                    ></a>
                   </li>
                 </ul>
               </div>
@@ -317,13 +337,7 @@
                 <h6>Brochure</h6>
                 <ul class="Brochure-tab">
                   <li>
-                    <a href="#"
-                      ><i class="fa-regular fa-file"></i> Brochure.doc
-                      <span>80kb</span></a
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
+                    <a href="../assets/Scipy Technologies Profile .pdf"
                       ><i class="fa-regular fa-file-pdf"></i> Brochure.pdf
                       <span>80kb</span></a
                     >
@@ -371,9 +385,7 @@
                   </li>
                   <li><a href="./advisory.html">Advanced Tech</a></li>
                   <li>
-                    <a href="./maintenance.html"
-                      >Maintenance and Support</a
-                    >
+                    <a href="./maintenance.html">Maintenance and Support</a>
                   </li>
                   <li><a href="./advisory.html">Advisory</a></li>
                   <li><a href="./appdev.html">App Development</a></li>
@@ -404,7 +416,7 @@
                     >
                   </li>
                   <li>
-                    <a href="mailto:info@scipytechnologies.com"
+                    <a href="mailto:hello@scipytechnologies.com"
                       ><i class="fa-solid fa-envelope"></i>mail us</a
                     >
                   </li>
