--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -159,12 +159,13 @@
                 </ul>
               </div>
               <div class="quote-btn">
-                <a class="btn btn-outline-primary btn-effect" href="#"
+                <a
+                  class="btn btn-outline-primary btn-effect"
+                  href="https://docs.google.com/forms/d/e/1FAIpQLSdCflnzkgZQJeNpMCLHlw5WEfF2kC_A36-_trk5WjdEcW6fhA/viewform?usp=sf_link"
                   >Get Quote</a
                 >
                 <div class="sidemenu-btn">
-                  <span></span>
-                  <span></span>
+                  <i class="fa-solid fa-bars"></i>
                 </div>
               </div>
             </nav>
@@ -187,13 +188,19 @@
                 <div class="header-right-nav">
                   <div class="email-header">
                     <span>Email us</span>
-                    <a href="#">info@scipytechnologies.com</a>
+                    <a href="mailto:hello@scipytechnologies.com">hello@scipytechnologies.com</a>
                   </div>
                   <div class="header-top-social">
-                    <a href="#">FB.</a>
-                    <a href="#">IN.</a>
-                    <a href="#">TW.</a>
-                    <a href="#">LN.</a>
+                    <a href="https://www.facebook.com/scipytechnologiez/"
+                      >FB.</a
+                    >
+                    <a href="https://www.instagram.com/scipytechnologies/"
+                      >IN.</a
+                    >
+                    <a
+                      href="https://www.linkedin.com/company/scipytechnologies/mycompany/"
+                      >LN.</a
+                    >
                   </div>
                 </div>
               </div>
@@ -224,29 +231,25 @@
                     class="about-3-img"
                     style="width: 300px; height: 300px; overflow: hidden"
                   >
-                    <img
-                      class="about-3"
-                      src="https://images.unsplash.com/photo-1521737711867-e3b97375f902?auto=format&fit=crop&q=80&w=1974&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                      style="padding: 10px; border-radius: 40px"
-                    />
+                    <div class="inner-about-3-img">
+                      <img
+                        class="about-3"
+                        src="https://images.unsplash.com/photo-1521737711867-e3b97375f902?auto=format&fit=crop&q=80&w=1974&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        style="padding: 10px; border-radius: 40px"
+                      />
+                    </div>
                   </div>
                 </div>
                 <div class="img-contents">
-                  <div
-                    class="about-4-img"
-                    style="
-                      width: 500px;
-                      height: 225px;
-                      overflow: hidden;
-                      border-radius: 0px !important;
-                    "
-                  >
-                    <div class="about-img-hover"></div>
-                    <img
-                      class="about-4"
-                      src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?auto=format&fit=crop&q=80&w=2070&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                      style="border-radius: 0px"
-                    />
+                  <div class="about-4-img">
+                    <div class="about_4_img">
+                      <div class="about-img-hover"></div>
+                      <img
+                        class="about-4"
+                        src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?auto=format&fit=crop&q=80&w=2070&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        style="border-radius: 0px"
+                      />
+                    </div>
                   </div>
                 </div>
               </div>
@@ -273,28 +276,31 @@
                 <div class="about-clear-row">
                   <div class="about-clear-col">
                     <div class="icon-div">
-                      <i class="fa-regular fa-lightbulb"></i>
+                      <i class="fa-solid fa-code"></i>
                     </div>
-                    <h6>Automobile Manufacturing</h6>
+                    <h6>Interships</h6>
                     <div class="about-one-block-text">
-                      Fusce eu eros nec felis venenatis fermentum sit amet eget
+                      We offer various levels of Interships, AI, ML, DL, MERN
+                      Stack, MEAN Stack, Digital Marketing, Data Science and
+                      UI/UX Designing
                     </div>
                   </div>
                   <div class="about-clear-col">
                     <div class="icon-div">
-                      <i class="fa-regular fa-lightbulb"></i>
+                      <i class="fa-solid fa-chart-simple"></i>
                     </div>
-                    <h6>Automobile Manufacturing</h6>
+                    <h6>Software Solutions</h6>
                     <div class="about-one-block-text">
-                      Fusce eu eros nec felis venenatis fermentum sit amet eget
+                      We offer various levels of solutions related on AI, ERP
+                      Solutions, Digital Marketing and Branding
                     </div>
                   </div>
                 </div>
-                <div class="about-btn-box">
+                <!-- <div class="about-btn-box">
                   <a href="" class="btn btn-primary more-about-btn"
                     >More About ➜</a
                   >
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -583,27 +589,7 @@
                   <p class="member-position">Project Associate</p>
                 </div>
               </div>
-              <div class="team-col">
-                <div class="team-image-div">
-                  <img
-                    class="team-img"
-                    src="../assets/teams/women.jpg"
-                    alt=""
-                  />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
-                </div>
-                <div class="team-content">
-                  <h4><a href="#" class="member-name">Sruthi S</a></h4>
-                  <p class="member-position">Full Stack Developer</p>
-                </div>
-              </div>
+
               <div class="team-col">
                 <div class="team-image-div">
                   <img class="team-img" src="../assets/teams/men.jpg" alt="" />
@@ -643,86 +629,7 @@
                   <p class="member-position">Human Resource Manager</p>
                 </div>
               </div>
-              <div class="team-col">
-                <div class="team-image-div">
-                  <img class="team-img" src="../assets/teams/men.jpg" alt="" />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
-                </div>
-                <div class="team-content">
-                  <h4><a href="#" class="member-name">Shan Raj</a></h4>
-                  <p class="member-position">Digital Marketing Executive</p>
-                </div>
-              </div>
-              <div class="team-col">
-                <div class="team-image-div">
-                  <img
-                    class="team-img"
-                    src="../assets/teams/women.jpg"
-                    alt=""
-                  />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
-                </div>
-                <div class="team-content">
-                  <h4><a href="#" class="member-name">Brinimol</a></h4>
-                  <p class="member-position">Business Development Officer</p>
-                </div>
-              </div>
-              <div class="team-col">
-                <div class="team-image-div">
-                  <img
-                    class="team-img"
-                    src="../assets/teams/women.jpg"
-                    alt=""
-                  />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
-                </div>
-                <div class="team-content">
-                  <h4><a href="#" class="member-name">Vismaya sivadas</a></h4>
-                  <p class="member-position">Business Development Officer</p>
-                </div>
-              </div>
-              <div class="team-col">
-                <div class="team-image-div">
-                  <img
-                    class="team-img"
-                    src="../assets/teams/women.jpg"
-                    alt=""
-                  />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
-                </div>
-                <div class="team-content">
-                  <h4><a href="#" class="member-name">Ankita A S</a></h4>
-                  <p class="member-position">BDE / DM Executive</p>
-                </div>
-              </div>
+
               <div class="team-col">
                 <div class="team-image-div">
                   <img
@@ -820,7 +727,7 @@
                 <h4 class="footer-title">Socials</h4>
                 <ul class="main-footer-list social-footer-list">
                   <li>
-                    <a href="https://www.facebook.com/SciPytechceo"
+                    <a href="https://www.facebook.com/scipytechnologiez/"
                       ><i class="fa-brands fa-facebook"></i>facebook</a
                     >
                   </li>
@@ -836,7 +743,7 @@
                     >
                   </li>
                   <li>
-                    <a href="mailto:info@scipytechnologies.com"
+                    <a href="mailto:hello@scipytechnologies.com"
                       ><i class="fa-solid fa-envelope"></i>mail us</a
                     >
                   </li>
