--- a/pages/careers.html
+++ b/pages/careers.html
@@ -140,12 +140,11 @@
                 </ul>
               </div>
               <div class="quote-btn">
-                <a class="btn btn-outline-primary btn-effect" href="#"
+                <a class="btn btn-outline-primary btn-effect" href="https://docs.google.com/forms/d/e/1FAIpQLSdCflnzkgZQJeNpMCLHlw5WEfF2kC_A36-_trk5WjdEcW6fhA/viewform?usp=sf_link"
                   >Get Quote</a
                 >
                 <div class="sidemenu-btn">
-                  <span></span>
-                  <span></span>
+                  <i class="fa-solid fa-bars"></i>
                 </div>
               </div>
             </nav>
@@ -170,13 +169,12 @@
                 <div class="header-right-nav">
                   <div class="email-header">
                     <span>Email us</span>
-                    <a href="#">info@scipytechnologies.com</a>
+                    <a href="mailto:hello@scipytechnologies.com">hello@scipytechnologies.com</a>
                   </div>
                   <div class="header-top-social">
-                    <a href="#">FB.</a>
-                    <a href="#">IN.</a>
-                    <a href="#">TW.</a>
-                    <a href="#">LN.</a>
+                    <a href="https://www.facebook.com/scipytechnologiez/">FB.</a>
+                    <a href="https://www.instagram.com/scipytechnologies/">IN.</a>
+                    <a href="https://www.linkedin.com/company/scipytechnologies/mycompany/">LN.</a>
                   </div>
                 </div>
               </div>
@@ -519,7 +517,7 @@
                 <h4 class="footer-title">Socials</h4>
                 <ul class="main-footer-list social-footer-list">
                   <li>
-                    <a href="https://www.facebook.com/SciPytechceo"
+                    <a href="https://www.facebook.com/scipytechnologiez/"
                       ><i class="fa-brands fa-facebook"></i>facebook</a
                     >
                   </li>
@@ -535,7 +533,7 @@
                     >
                   </li>
                   <li>
-                    <a href="mailto:info@scipytechnologies.com"
+                    <a href="mailto:hello@scipytechnologies.com"
                       ><i class="fa-solid fa-envelope"></i>mail us</a
                     >
                   </li>
