--- a/pages/contact.html
+++ b/pages/contact.html
@@ -154,12 +154,11 @@
                 </ul>
               </div>
               <div class="quote-btn">
-                <a class="btn btn-outline-primary btn-effect" href="#"
+                <a class="btn btn-outline-primary btn-effect" href="https://docs.google.com/forms/d/e/1FAIpQLSdCflnzkgZQJeNpMCLHlw5WEfF2kC_A36-_trk5WjdEcW6fhA/viewform?usp=sf_link"
                   >Get Quote</a
                 >
                 <div class="sidemenu-btn">
-                  <span></span>
-                  <span></span>
+                  <i class="fa-solid fa-bars"></i>
                 </div>
               </div>
             </nav>
@@ -184,13 +183,12 @@
                 <div class="header-right-nav">
                   <div class="email-header">
                     <span>Email us</span>
-                    <a href="#">info@scipytechnologies.com</a>
+                    <a href="mailto:hello@scipytechnologies.com">hello@scipytechnologies.com</a>
                   </div>
                   <div class="header-top-social">
-                    <a href="#">FB.</a>
-                    <a href="#">IN.</a>
-                    <a href="#">TW.</a>
-                    <a href="#">LN.</a>
+                    <a href="https://www.facebook.com/scipytechnologiez/">FB.</a>
+                    <a href="https://www.instagram.com/scipytechnologies/">IN.</a>
+                    <a href="https://www.linkedin.com/company/scipytechnologies/mycompany/">LN.</a>
                   </div>
                 </div>
               </div>
@@ -281,17 +279,17 @@
           </div>
           <div class="adr">
             <div
-              class="adr-row d-flex justify-content-center align-items-center gap-5"
+              class="adr-row"
             >
               <div class="adr-col">
-                <h4 class="txt"><i style="margin-right: 15px; color: #0092ff;" class="fa-solid fa-indian-rupee-sign"></i>Head Office</h4>
+                <h4 class="txt"></i>Head Office</h4>
                 <span class="txth">
                   TC 26/981, First floor, Plammoodu - PMG Road TVM - 04, Kerala
                   695033
                 </span>
               </div>
               <div class="adr-col">
-                <h4 class="txt"><i style="margin-right: 15px; color: #0092ff;" class="fa-solid fa-dollar-sign"></i>Cooperative Office</h4>
+                <h4 class="txt">Cooperative Office</h4>
                 <span class="txth">
                   6010 Singletree lane <br />Jamesville Newyork USA
                 </span>
@@ -365,7 +363,7 @@
                 <h4 class="footer-title">Socials</h4>
                 <ul class="main-footer-list social-footer-list">
                   <li>
-                    <a href="https://www.facebook.com/SciPytechceo"
+                    <a href="https://www.facebook.com/scipytechnologiez/"
                       ><i class="fa-brands fa-facebook"></i>facebook</a
                     >
                   </li>
@@ -381,7 +379,7 @@
                     >
                   </li>
                   <li>
-                    <a href="mailto:info@scipytechnologies.com"
+                    <a href="mailto:hello@scipytechnologies.com"
                       ><i class="fa-solid fa-envelope"></i>mail us</a
                     >
                   </li>
