--- a/pages/project.html
+++ b/pages/project.html
@@ -168,12 +168,13 @@
                 </ul>
               </div>
               <div class="quote-btn">
-                <a class="btn btn-outline-primary btn-effect" href="#"
+                <a
+                  class="btn btn-outline-primary btn-effect"
+                  href="https://docs.google.com/forms/d/e/1FAIpQLSdCflnzkgZQJeNpMCLHlw5WEfF2kC_A36-_trk5WjdEcW6fhA/viewform?usp=sf_link"
                   >Get Quote</a
                 >
                 <div class="sidemenu-btn">
-                  <span></span>
-                  <span></span>
+                  <i class="fa-solid fa-bars"></i>
                 </div>
               </div>
             </nav>
@@ -198,13 +199,21 @@
                 <div class="header-right-nav">
                   <div class="email-header">
                     <span>Email us</span>
-                    <a href="#">info@scipytechnologies.com</a>
+                    <a href="mailto:hello@scipytechnologies.com"
+                      >hello@scipytechnologies.com</a
+                    >
                   </div>
                   <div class="header-top-social">
-                    <a href="#">FB.</a>
-                    <a href="#">IN.</a>
-                    <a href="#">TW.</a>
-                    <a href="#">LN.</a>
+                    <a href="https://www.facebook.com/scipytechnologiez/"
+                      >FB.</a
+                    >
+                    <a href="https://www.instagram.com/scipytechnologies/"
+                      >IN.</a
+                    >
+                    <a
+                      href="https://www.linkedin.com/company/scipytechnologies/mycompany/"
+                      >LN.</a
+                    >
                   </div>
                 </div>
               </div>
@@ -238,43 +247,98 @@
             <div class="Projects-div">
               <ol class="pro-col">
                 <li>
-                  <a target="_blank">Real Time View Counting (Advertising)</a>
-                </li>
-                <li>
-                  <a target="_blank">LLM Based Speech and Text Transformater</a>
-                </li>
-                <li>
-                  <a target="_blank">Farm App AI (App for Every user)</a>
-                </li>
-                <li>
-                  <a target="_blank">Stock Data Analytics and Forecasting</a>
-                </li>
-                <li><a target="_blank">Auto Catract Surgery Bot</a></li>
-                <li>
-                  <a target="_blank">Derma-net for Skin lesion Segmentation</a>
+                  <a target="_blank"
+                    ><span class="list_nums">1.</span> Real Time View Counting
+                    (Advertising)</a
+                  >
                 </li>
                 <li>
                   <a target="_blank"
-                    >Web Scapping and Automation Email Verifier</a
+                    ><span class="list_nums">2.</span>LLM Based Speech and Text
+                    Transformater</a
                   >
                 </li>
-                <li><a target="_blank">AI-Fire Bot</a></li>
                 <li>
-                  <a href="#">Plant Disease Detection (Plant-Care App)</a>
+                  <a target="_blank"
+                    ><span class="list_nums">3.</span>Farm App AI (App for Every
+                    user)</a
+                  >
                 </li>
-                <li><a href="#">Malayalam Speech Generation App</a></li>
-                <li><a href="#">Image Enchancement App</a></li>
+                <li>
+                  <a target="_blank"
+                    ><span class="list_nums">4.</span>Stock Data Analytics and
+                    Forecasting</a
+                  >
+                </li>
+                <li>
+                  <a target="_blank"
+                    ><span class="list_nums">5.</span>Auto Catract Surgery
+                    Bot</a
+                  >
+                </li>
+                <li>
+                  <a target="_blank"
+                    ><span class="list_nums">6.</span>Derma-net for Skin lesion
+                    Segmentation</a
+                  >
+                </li>
+                <li>
+                  <a target="_blank"
+                    ><span class="list_nums">7.</span>Web Scapping and
+                    Automation Email Verifier</a
+                  >
+                </li>
+                <li>
+                  <a target="_blank"
+                    ><span class="list_nums">8.</span>AI-Fire Bot</a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><span class="list_nums">9.</span>Plant Disease Detection
+                    (Plant-Care App)</a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><span class="list_nums">10.</span>Malayalam Speech
+                    Generation App</a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><span class="list_nums">11.</span>Image Enchancement App</a
+                  >
+                </li>
 
-
                 <li>
-                  <a href="#">Medical Image Analysis & Feature Extraction</a>
+                  <a href="#"
+                    ><span class="list_nums">12.</span>Medical Image Analysis &
+                    Feature Extraction</a
+                  >
                 </li>
-                <li><a href="#">Bone frature Detection</a></li>
                 <li>
-                  <a href="#">Skin ACNE Analysis & Real time Identification</a>
+                  <a href="#"
+                    ><span class="list_nums">13.</span>Bone frature Detection</a
+                  >
                 </li>
-                <li><a href="#">Stock Data Analysis</a></li>
-                <li><a href="#">Auto Scientific name from Image Search</a></li>
+                <li>
+                  <a href="#"
+                    ><span class="list_nums">14.</span>Skin ACNE Analysis & Real
+                    time Identification</a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><span class="list_nums">15.</span>Stock Data Analysis</a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><span class="list_nums">16.</span>Auto Scientific name from
+                    Image Search</a
+                  >
+                </li>
               </ol>
             </div>
           </div>
@@ -332,7 +396,7 @@
                 <h4 class="footer-title">Socials</h4>
                 <ul class="main-footer-list social-footer-list">
                   <li>
-                    <a href="https://www.facebook.com/SciPytechceo"
+                    <a href="https://www.facebook.com/scipytechnologiez/"
                       ><i class="fa-brands fa-facebook"></i>facebook</a
                     >
                   </li>
@@ -348,7 +412,7 @@
                     >
                   </li>
                   <li>
-                    <a href="mailto:info@scipytechnologies.com"
+                    <a href="mailto:hello@scipytechnologies.com"
                       ><i class="fa-solid fa-envelope"></i>mail us</a
                     >
                   </li>
