--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="owlcarousel/owl.carousel.min.css" />
     <link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css" />
+    <link rel="icon" href="https://scipytechnologies.com/images/favicon.png" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
@@ -32,7 +33,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Scipy Technologies</title>
+    <title>Scipy Technologies | Home</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -177,12 +178,13 @@
                 </ul>
               </div>
               <div class="quote-btn">
-                <a class="btn btn-outline-primary btn-effect" href="#"
+                <a
+                  class="btn btn-outline-primary btn-effect"
+                  href="https://docs.google.com/forms/d/e/1FAIpQLSdCflnzkgZQJeNpMCLHlw5WEfF2kC_A36-_trk5WjdEcW6fhA/viewform?usp=sf_link"
                   >Get Quote</a
                 >
                 <div class="sidemenu-btn">
-                  <span></span>
-                  <span></span>
+                  <i class="fa-solid fa-bars"></i>
                 </div>
               </div>
             </nav>
@@ -975,7 +977,7 @@
                 <img src="./assets/technologies/nlp.png" alt="" />
               </div>
               <div class="tech-down">
-                <h3>Natural Language Processing</h3>
+                <h3>NLP</h3>
               </div>
             </div>
           </div>
@@ -1024,7 +1026,11 @@
                 </p>
                 <p class="contact-detail">
                   <i class="fa-solid fa-envelope"></i
-                  ><span>Hello@scipy.com</span>
+                  ><span
+                    ><a href="mailto:hello@scipytechnologies.com"
+                      >hello@scipytechnologies.com</a
+                    ></span
+                  >
                 </p>
                 <div class="contact-us">
                   <a href="#"
@@ -1044,7 +1050,11 @@
                 </p>
                 <p class="contact-detail">
                   <i class="fa-solid fa-envelope"></i
-                  ><span>info@scipy.com</span>
+                  ><span
+                    ><a href="mailto:hello@scipytechnologies.com"
+                      >hello@scipytechnologies.com</a
+                    ></span
+                  >
                 </p>
                 <div class="contact-us">
                   <a href="#"
@@ -1125,7 +1135,7 @@
                 <h4 class="footer-title">Socials</h4>
                 <ul class="main-footer-list social-footer-list">
                   <li>
-                    <a href="https://www.facebook.com/SciPytechceo"
+                    <a href="https://www.facebook.com/scipytechnologiez/"
                       ><i class="fa-brands fa-facebook"></i>facebook</a
                     >
                   </li>
@@ -1141,7 +1151,7 @@
                     >
                   </li>
                   <li>
-                    <a href="mailto:info@scipytechnologies.com"
+                    <a href="mailto:hello@scipytechnologies.com"
                       ><i class="fa-solid fa-envelope"></i>mail us</a
                     >
                   </li>
