--- a/pages/aisol.html
+++ b/pages/aisol.html
@@ -158,12 +158,13 @@
                 </ul>
               </div>
               <div class="quote-btn">
-                <a class="btn btn-outline-primary btn-effect" href="#"
+                <a
+                  class="btn btn-outline-primary btn-effect"
+                  href="https://docs.google.com/forms/d/e/1FAIpQLSdCflnzkgZQJeNpMCLHlw5WEfF2kC_A36-_trk5WjdEcW6fhA/viewform?usp=sf_link"
                   >Get Quote</a
                 >
                 <div class="sidemenu-btn">
-                  <span></span>
-                  <span></span>
+                  <i class="fa-solid fa-bars"></i>
                 </div>
               </div>
             </nav>
@@ -188,13 +189,21 @@
                 <div class="header-right-nav">
                   <div class="email-header">
                     <span>Email us</span>
-                    <a href="#">info@scipytechnologies.com</a>
+                    <a href="mailto:hello@scipytechnologies.com"
+                      >hello@scipytechnologies.com</a
+                    >
                   </div>
                   <div class="header-top-social">
-                    <a href="#">FB.</a>
-                    <a href="#">IN.</a>
-                    <a href="#">TW.</a>
-                    <a href="#">LN.</a>
+                    <a href="https://www.facebook.com/scipytechnologiez/"
+                      >FB.</a
+                    >
+                    <a href="https://www.instagram.com/scipytechnologies/"
+                      >IN.</a
+                    >
+                    <a
+                      href="https://www.linkedin.com/company/scipytechnologies/mycompany/"
+                      >LN.</a
+                    >
                   </div>
                 </div>
               </div>
@@ -318,19 +327,26 @@
                 <h6>Social Icon</h6>
                 <ul class="social-icons-tab">
                   <li>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/scipytechnologies/"
+                      ><i class="fa-brands fa-instagram"></i
+                    ></a>
                   </li>
                   <li>
-                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/scipytechnologiez/"
+                      ><i class="fa-brands fa-facebook"></i
+                    ></a>
+                  </li>
+
+                  <li>
+                    <a
+                      href="https://www.linkedin.com/company/scipytechnologies/mycompany/"
+                      ><i class="fa-brands fa-linkedin"></i
+                    ></a>
                   </li>
                   <li>
-                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="https://www.youtube.com/@SciPyTechnologies"
+                      ><i class="fa-brands fa-youtube"></i
+                    ></a>
                   </li>
                 </ul>
               </div>
@@ -338,13 +354,7 @@
                 <h6>Brochure</h6>
                 <ul class="Brochure-tab">
                   <li>
-                    <a href="#"
-                      ><i class="fa-regular fa-file"></i> Brochure.doc
-                      <span>80kb</span></a
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
+                    <a href="../assets/Scipy Technologies Profile .pdf"
                       ><i class="fa-regular fa-file-pdf"></i> Brochure.pdf
                       <span>80kb</span></a
                     >
@@ -407,7 +417,7 @@
                 <h4 class="footer-title">Socials</h4>
                 <ul class="main-footer-list social-footer-list">
                   <li>
-                    <a href="https://www.facebook.com/SciPytechceo"
+                    <a href="https://www.facebook.com/scipytechnologiez/"
                       ><i class="fa-brands fa-facebook"></i>facebook</a
                     >
                   </li>
@@ -423,7 +433,7 @@
                     >
                   </li>
                   <li>
-                    <a href="mailto:info@scipytechnologies.com"
+                    <a href="mailto:hello@scipytechnologies.com"
                       ><i class="fa-solid fa-envelope"></i>mail us</a
                     >
                   </li>
