--- a/pages/aisol.html
+++ b/pages/aisol.html
@@ -173,9 +173,9 @@
         <div
           class="about-home"
           style="
-            background: url('../assets/Service-images/Maintenance\ and\ support\ -\ 1.jpg');
-            background-position: center center;
-            background-size: contain;
+            background: url('../assets/services/aisolutions/1.jpg');
+            background-position: bottom;
+            background-size: cover;
           "
         >
           <div class="header-top">
@@ -241,7 +241,7 @@
             <div class="content-col">
               <img
                 class="main-img"
-                src="../assets/Service-images/Maintenance and support - 2.jpg"
+                src="../assets/services/aisolutions/2.jpg"
                 alt=""
               />
               <div class="lower-content">
@@ -276,7 +276,7 @@
                     <img
                       style="border-radius: 30px"
                       class="lower-content-img"
-                      src="../assets/Service-images/Maintenance and support - 3.jpg"
+                      src="../assets/services/aisolutions/3.jpg+"
                       alt=""
                     />
                   </div>
