--- a/pages/careers.html
+++ b/pages/careers.html
@@ -140,7 +140,9 @@
                 </ul>
               </div>
               <div class="quote-btn">
-                <a class="btn btn-outline-primary btn-effect" href="https://docs.google.com/forms/d/e/1FAIpQLSdCflnzkgZQJeNpMCLHlw5WEfF2kC_A36-_trk5WjdEcW6fhA/viewform?usp=sf_link"
+                <a
+                  class="btn btn-outline-primary btn-effect"
+                  href="https://docs.google.com/forms/d/e/1FAIpQLSdCflnzkgZQJeNpMCLHlw5WEfF2kC_A36-_trk5WjdEcW6fhA/viewform?usp=sf_link"
                   >Get Quote</a
                 >
                 <div class="sidemenu-btn">
@@ -169,12 +171,21 @@
                 <div class="header-right-nav">
                   <div class="email-header">
                     <span>Email us</span>
-                    <a href="mailto:hello@scipytechnologies.com">hello@scipytechnologies.com</a>
+                    <a href="mailto:hello@scipytechnologies.com"
+                      >hello@scipytechnologies.com</a
+                    >
                   </div>
                   <div class="header-top-social">
-                    <a href="https://www.facebook.com/scipytechnologiez/">FB.</a>
-                    <a href="https://www.instagram.com/scipytechnologies/">IN.</a>
-                    <a href="https://www.linkedin.com/company/scipytechnologies/mycompany/">LN.</a>
+                    <a href="https://www.facebook.com/scipytechnologiez/"
+                      >FB.</a
+                    >
+                    <a href="https://www.instagram.com/scipytechnologies/"
+                      >IN.</a
+                    >
+                    <a
+                      href="https://www.linkedin.com/company/scipytechnologies/mycompany/"
+                      >LN.</a
+                    >
                   </div>
                 </div>
               </div>
@@ -245,7 +256,7 @@
                 <div class="team-image-div">
                   <img
                     class="team-img"
-                    src="../assets/teams/women.jpg"
+                    src="../assets/careers/Jinisha Jobin.jpg"
                     alt=""
                   />
                   <div
@@ -258,92 +269,7 @@
                   </div>
                 </div>
                 <div class="team-content">
-                  <h4><a href="#" class="member-name">Nithya Rajendran</a></h4>
-                  <p class="member-position">Software Developer</p>
-                </div>
-              </div>
-              <div class="team-col">
-                <div class="team-image-div">
-                  <img class="team-img" src="../assets/teams/men.jpg" alt="" />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
-                </div>
-                <div class="team-content">
-                  <h4><a href="#" class="member-name">Chinju</a></h4>
-                  <p class="member-position">System Engineer</p>
-                </div>
-              </div>
-              <div class="team-col">
-                <div class="team-image-div">
-                  <img class="team-img" src="../assets/teams/men.jpg" alt="" />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
-                </div>
-                <div class="team-content">
-                  <h4><a href="#" class="member-name">Varghese</a></h4>
-                  <p class="member-position">Software Developer</p>
-                </div>
-              </div>
-              <div class="team-col">
-                <div class="team-image-div">
-                  <img class="team-img" src="../assets/teams/men.jpg" alt="" />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
-                </div>
-                <div class="team-content">
-                  <h4><a href="#" class="member-name">Nithya Rajendran</a></h4>
-                  <p class="member-position">Software Developer</p>
-                </div>
-              </div>
-              <div class="team-col">
-                <div class="team-image-div">
-                  <img class="team-img" src="../assets/teams/men.jpg" alt="" />
-                  <div
-                    class="hover-social-menu d-flex justify-content-between align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
-                </div>
-                <div class="team-content">
-                  <h4><a href="#" class="member-name">Chinju</a></h4>
-                  <p class="member-position">System Engineer</p>
-                </div>
-              </div>
-              <div class="team-col">
-                <div class="team-image-div">
-                  <img class="team-img" src="../assets/teams/men.jpg" alt="" />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
-                </div>
-                <div class="team-content">
-                  <h4><a href="#" class="member-name">Varghese</a></h4>
+                  <h4><a href="#" class="member-name">Jinisha Jobin</a></h4>
                   <p class="member-position">Software Developer</p>
                 </div>
               </div>
@@ -351,7 +277,7 @@
                 <div class="team-image-div">
                   <img
                     class="team-img"
-                    src="../assets/teams/women.jpg"
+                    src="../assets/careers/Megha.jpg"
                     alt=""
                   />
                   <div
@@ -364,13 +290,59 @@
                   </div>
                 </div>
                 <div class="team-content">
-                  <h4><a href="#" class="member-name">Nithya Rajendran</a></h4>
+                  <h4><a href="#" class="member-name">Megha</a></h4>
                   <p class="member-position">Software Developer</p>
                 </div>
               </div>
               <div class="team-col">
                 <div class="team-image-div">
-                  <img class="team-img" src="../assets/teams/men.jpg" alt="" />
+                  <img
+                    class="team-img"
+                    src="../assets/careers/Monisha.jpeg"
+                    alt=""
+                  />
+                  <div
+                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
+                  >
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-github"></i>
+                  </div>
+                </div>
+                <div class="team-content">
+                  <h4><a href="#" class="member-name">Monisha</a></h4>
+                  <p class="member-position">Software Developer</p>
+                </div>
+              </div>
+              <div class="team-col">
+                <div class="team-image-div">
+                  <img
+                    class="team-img"
+                    src="../assets/careers/Sophia.jpeg"
+                    alt=""
+                  />
+                  <div
+                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
+                  >
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-github"></i>
+                  </div>
+                </div>
+                <div class="team-content">
+                  <h4><a href="#" class="member-name">Sophia</a></h4>
+                  <p class="member-position">Software Developer</p>
+                </div>
+              </div>
+              <div class="team-col">
+                <div class="team-image-div">
+                  <img
+                    class="team-img"
+                    src="../assets/teams/chinju.jpg"
+                    alt=""
+                  />
                   <div
                     class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
                   >
@@ -382,14 +354,14 @@
                 </div>
                 <div class="team-content">
                   <h4><a href="#" class="member-name">Chinju</a></h4>
-                  <p class="member-position">System Engineer</p>
+                  <p class="member-position">Software Developer</p>
                 </div>
               </div>
               <div class="team-col">
                 <div class="team-image-div">
                   <img
                     class="team-img"
-                    src="../assets/teams/women.jpg"
+                    src="../assets/careers/Tincy K Thomas.jpeg"
                     alt=""
                   />
                   <div
@@ -402,7 +374,7 @@
                   </div>
                 </div>
                 <div class="team-content">
-                  <h4><a href="#" class="member-name">Varghese</a></h4>
+                  <h4><a href="#" class="member-name">Tincy K Thomas</a></h4>
                   <p class="member-position">Software Developer</p>
                 </div>
               </div>
@@ -410,7 +382,7 @@
                 <div class="team-image-div">
                   <img
                     class="team-img"
-                    src="../assets/teams/women.jpg"
+                    src="../assets/teams/vargees.jpg"
                     alt=""
                   />
                   <div
@@ -423,13 +395,17 @@
                   </div>
                 </div>
                 <div class="team-content">
-                  <h4><a href="#" class="member-name">Nithya Rajendran</a></h4>
+                  <h4><a href="#" class="member-name">Vargees</a></h4>
                   <p class="member-position">Software Developer</p>
                 </div>
               </div>
               <div class="team-col">
                 <div class="team-image-div">
-                  <img class="team-img" src="../assets/teams/men.jpg" alt="" />
+                  <img
+                    class="team-img"
+                    src="../assets/teams/nithya.jpeg"
+                    alt=""
+                  />
                   <div
                     class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
                   >
@@ -440,24 +416,7 @@
                   </div>
                 </div>
                 <div class="team-content">
-                  <h4><a href="#" class="member-name">Chinju</a></h4>
-                  <p class="member-position">System Engineer</p>
-                </div>
-              </div>
-              <div class="team-col">
-                <div class="team-image-div">
-                  <img class="team-img" src="../assets/teams/men.jpg" alt="" />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
-                </div>
-                <div class="team-content">
-                  <h4><a href="#" class="member-name">Varghese</a></h4>
+                  <h4><a href="#" class="member-name">Nithya</a></h4>
                   <p class="member-position">Software Developer</p>
                 </div>
               </div>
