--- a/pages/careers.html
+++ b/pages/careers.html
@@ -270,7 +270,7 @@
                 </div>
                 <div class="team-content">
                   <h4><a href="#" class="member-name">Jinisha Jobin</a></h4>
-                  <p class="member-position">Software Developer</p>
+                  <p class="member-position">RR Donnelley</p>
                 </div>
               </div>
               <div class="team-col">
@@ -291,12 +291,13 @@
                 </div>
                 <div class="team-content">
                   <h4><a href="#" class="member-name">Megha</a></h4>
-                  <p class="member-position">Software Developer</p>
+                  <p class="member-position">Funture Blox</p>
                 </div>
               </div>
               <div class="team-col">
                 <div class="team-image-div">
                   <img
+                    style="height: 320px"
                     class="team-img"
                     src="../assets/careers/Monisha.jpeg"
                     alt=""
@@ -312,7 +313,7 @@
                 </div>
                 <div class="team-content">
                   <h4><a href="#" class="member-name">Monisha</a></h4>
-                  <p class="member-position">Software Developer</p>
+                  <p class="member-position">Bytes</p>
                 </div>
               </div>
               <div class="team-col">
@@ -333,7 +334,7 @@
                 </div>
                 <div class="team-content">
                   <h4><a href="#" class="member-name">Sophia</a></h4>
-                  <p class="member-position">Software Developer</p>
+                  <p class="member-position">Ainsoft Solutions</p>
                 </div>
               </div>
               <div class="team-col">
@@ -354,7 +355,7 @@
                 </div>
                 <div class="team-content">
                   <h4><a href="#" class="member-name">Chinju</a></h4>
-                  <p class="member-position">Software Developer</p>
+                  <p class="member-position">InfoSys</p>
                 </div>
               </div>
               <div class="team-col">
@@ -375,7 +376,7 @@
                 </div>
                 <div class="team-content">
                   <h4><a href="#" class="member-name">Tincy K Thomas</a></h4>
-                  <p class="member-position">Software Developer</p>
+                  <p class="member-position">Aspiration Worx</p>
                 </div>
               </div>
               <div class="team-col">
@@ -418,6 +419,112 @@
                 <div class="team-content">
                   <h4><a href="#" class="member-name">Nithya</a></h4>
                   <p class="member-position">Software Developer</p>
+                </div>
+              </div>
+              <div class="team-col">
+                <div class="team-image-div">
+                  <img
+                    style="width: 620px; background-size: cover"
+                    class="team-img"
+                    src="../assets/careers/Alka infosys.png"
+                    alt=""
+                  />
+                  <div
+                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
+                  >
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-github"></i>
+                  </div>
+                </div>
+                <div class="team-content">
+                  <h4><a href="#" class="member-name">Alka</a></h4>
+                  <p class="member-position">Infosys</p>
+                </div>
+              </div>
+              <div class="team-col">
+                <div class="team-image-div">
+                  <img
+                    class="team-img"
+                    src="../assets/careers/Almi UST.png"
+                    alt=""
+                  />
+                  <div
+                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
+                  >
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-github"></i>
+                  </div>
+                </div>
+                <div class="team-content">
+                  <h4><a href="#" class="member-name">Almi</a></h4>
+                  <p class="member-position">UST</p>
+                </div>
+              </div>
+              <div class="team-col">
+                <div class="team-image-div">
+                  <img
+                    class="team-img"
+                    src="../assets/careers/Joel Joy Quest.png"
+                    alt=""
+                  />
+                  <div
+                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
+                  >
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-github"></i>
+                  </div>
+                </div>
+                <div class="team-content">
+                  <h4><a href="#" class="member-name">Joel Joy</a></h4>
+                  <p class="member-position">Quest</p>
+                </div>
+              </div>
+              <div class="team-col">
+                <div class="team-image-div">
+                  <img
+                    class="team-img"
+                    src="../assets/careers/Rahana quest.png"
+                    alt=""
+                  />
+                  <div
+                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
+                  >
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-github"></i>
+                  </div>
+                </div>
+                <div class="team-content">
+                  <h4><a href="#" class="member-name">Rahana</a></h4>
+                  <p class="member-position">Quest</p>
+                </div>
+              </div>
+              <div class="team-col">
+                <div class="team-image-div">
+                  <img
+                    class="team-img"
+                    src="../assets/careers/Sajitha UST.png"
+                    alt=""
+                  />
+                  <div
+                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
+                  >
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-github"></i>
+                  </div>
+                </div>
+                <div class="team-content">
+                  <h4><a href="#" class="member-name">Sajitha</a></h4>
+                  <p class="member-position">UST</p>
                 </div>
               </div>
             </div>
