fixed careers image

--- a/pages/careers.html
+++ b/pages/careers.html
@@ -255,6 +255,7 @@
               <div class="team-col">
                 <div class="team-image-div">
                   <img
+                    style="top: 20px !important"
                     class="team-img"
                     src="../assets/careers/Jinisha Jobin.jpg"
                     alt=""
@@ -297,7 +298,7 @@
               <div class="team-col">
                 <div class="team-image-div">
                   <img
-                    style="height: 320px"
+                    style="margin-top: 27px !important"
                     class="team-img"
                     src="../assets/careers/Monisha.jpeg"
                     alt=""
@@ -424,7 +425,6 @@
               <div class="team-col">
                 <div class="team-image-div">
                   <img
-                    style="width: 620px; background-size: cover"
                     class="team-img"
                     src="../assets/careers/Alka infosys.png"
                     alt=""
@@ -444,7 +444,7 @@
                 </div>
               </div>
               <div class="team-col">
-                <div class="team-image-div">
+                <div class="team-image-div" style="overflow: hidden">
                   <img
                     class="team-img"
                     src="../assets/careers/Almi UST.png"
@@ -468,7 +468,7 @@
                 <div class="team-image-div">
                   <img
                     class="team-img"
-                    src="../assets/careers/Joel Joy Quest.png"
+                    src="../assets/careers/Joel Joy Quest.jpg"
                     alt=""
                   />
                   <div
